--- a/open-data.html
+++ b/open-data.html
@@ -9,10 +9,13 @@
   <link rel="stylesheet" href="buttondown.css" type="text/css" />
 </head>
 <body>
+<div id="header">
+<h1 class="title">true</h1>
+</div>
 <div id="TOC">
 <ul>
-<li><a href="#challenges-facing-open-data-and-possible-solutionsrecommendations-for-addressing-these-challenges">Challenges facing Open Data and possible solutions/recommendations for addressing these challenges</a><ul>
-<li><a href="#open-data-is-...">Open Data is ...</a></li>
+<li><a href="#abstract">Abstract</a><ul>
+<li><a href="#open-data-is">Open Data is …</a></li>
 <li><a href="#how-should-we-speak-of-the-challenges-for-open-data">How should we speak of the challenges for Open Data?</a></li>
 <li><a href="#rule-0.-share-your-data">Rule 0. Share your data</a></li>
 <li><a href="#rule-1.-love-your-data-and-help-others-love-it-too">Rule 1. Love Your Data, and Help Others Love It, Too</a></li>
@@ -35,30 +38,30 @@
 </ul></li>
 </ul>
 </div>
-<h1 id="challenges-facing-open-data-and-possible-solutionsrecommendations-for-addressing-these-challenges">Challenges facing Open Data and possible solutions/recommendations for addressing these challenges</h1>
+<h1 id="abstract">Abstract</h1>
 <p>Arguments in favour of Open Data in research are becoming overwhelming. There are calls a national <span class="citation">(RCUK 2015)</span> and international levels <span class="citation">(Moedas 2015, <span class="citation">Boulton et al. (2012)</span>)</span>. Here I will set out a working definition of Open Data and briefly discuss the key challenges preventing Open Data becoming standard practice. I will attempt to draw some general solutions from field specific examples.</p>
-<h2 id="open-data-is-...">Open Data is ...</h2>
+<h2 id="open-data-is">Open Data is …</h2>
 <p>Open Data is Findable, Accessible, Interoperable and Reusable <span class="citation">(Wilkinson et al. 2016)</span>. Making data available is key to support reproducibility, but by far the greatest benefit comes when data can be built upon, and in so doing can truly assist with the advancement of knowledge. In addition, one re-use of a data set effectively halves the cost per use of that data.</p>
 <h2 id="how-should-we-speak-of-the-challenges-for-open-data">How should we speak of the challenges for Open Data?</h2>
 <p><span class="citation">(Goodman et al. 2014)</span> lay out ten rules for the care and feeding of scientific data. Were all of these rules to be adhered to by all researchers, we would have as good an Open Data ecosystem as we could wish for. In this light then, let us look at what might be preventing us from adopting the key practices from these rules!</p>
 <h2 id="rule-0.-share-your-data">Rule 0. Share your data</h2>
 <p>This is an almost unwritten rule from this paper, and the paper starts from the position that a given researcher wants to share their data. The general lack of willingness of researchers to share their data is the greatest of the challenges, and I will return to this point at the end of this paper, to consider it in light of the other challenges discussed.</p>
 <h2 id="rule-1.-love-your-data-and-help-others-love-it-too">Rule 1. Love Your Data, and Help Others Love It, Too</h2>
-<p><a href="http://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1003542#s2">This rule</a> talks about the need to create data that is well described and well documented. Where the data is available, it's usefulness is strongly hindered if no one other than the data creator knows how to use that data.</p>
+<p><a href="http://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1003542#s2">This rule</a> talks about the need to create data that is well described and well documented. Where the data is available, it’s usefulness is strongly hindered if no one other than the data creator knows how to use that data.</p>
 <p>A number of potential challenges stand in the way of making this happen. Keeping track of what the researcher did can be complicated. Some data is hyper-hetrogeneous, bringing together multi-varied data across many dimensions, in such a way that only the researcher who created that data set understands how to unpick it.</p>
 <ul>
 <li>use field specific standards where they exist</li>
 <li>where new formats are created, make them interoperable - OpenOMERO</li>
 <li>work on standardisation bodies - See W3C open Annotation group as a good example of this for the humanities</li>
 <li>Some data practices are specific, but the core practices are generic, and in the move from paper lab notebooks to digital data, we can take lessons from the software world</li>
-<li>ensure there is training in data management, support initiatives like Data Carpentry, Software Carpentry, point researchers towards online learning resources (e.g. data science courses), work on supporting a scientific data science online resource</li>
+<li>ensure there is training in data management, support initiatives like Data Carpentry, Software Carpentry, point researchers towards online learning resources (e.g. data science courses), work on supporting a scientific data science online resource</li>
 </ul>
 <h2 id="rule-2.-share-your-data-online-with-a-permanent-identifier">Rule 2. Share your data online with a Permanent identifier</h2>
 <p>The data under the desk phenomenon is well known.</p>
 <ul>
 <li>Big data has a home, Astronomy, Particle Physics, Genomics<br /></li>
 <li>Highly specific data has a home<br /></li>
-<li>Hetrogenous &quot;data under the desk&quot; data have no natural home, but there are not options -- Figshare, Zenodo, DataDryad, Github
+<li>Hetrogenous “data under the desk” data have no natural home, but there are not options – Figshare, Zenodo, DataDryad, Github
 <ul>
 <li>Challenge here is in making researchers aware of the existence of these resources, and encouraging them to use them.</li>
 </ul></li>
