--- a/open-data.html
+++ b/open-data.html
@@ -31,7 +31,7 @@
 <p>Open Data is Findable, Accessible, Interoperable and Reusable <span class="citation">(Wilkinson et al. 2016)</span>. Making data available is key to support reproducibility, but by far the greatest benefit comes when data can be built upon, and in so doing can truly assist with the advancement of knowledge. In addition, one re-use of a data set effectively doubles the utility of that dataset.</p>
 <h1 id="how-should-we-speak-of-the-challenges-for-open-data">How should we speak of the challenges for Open Data?</h1>
 <p><span class="citation">(Goodman et al. 2014)</span> lay out ten rules for the care and feeding of scientific data. Were all of these rules to be adhered to by all researchers, we would have as good an Open Data ecosystem as we could wish for. Let us look at what might be preventing us from adopting the key practices from these rules! To streamline the discussion I have grouped the ten rules into three core challenges.</p>
-<h1 id="core-challenge-one-competence-in-working-with-data">Core Challenge One: competence in working with data</h1>
+<h1 id="core-challenge-one-competence-in-working-with-data">Core Challenge One: Competence in Working with Data</h1>
 <p>This challenge is addressed by rules one, three and four:</p>
 <ul>
 <li>Rule 1. Love Your Data, and Help Others Love It, Too</li>
@@ -48,24 +48,18 @@
 </li>
 <li>New scientific tools coming to market sometimes create proprietary data formats as output formats<br />
 </li>
-<li>researchers sometimes create custom data formats for their research (Figshare hosts over xxx distinct types of dataset)<br />
-</li>
+<li>researchers sometimes create custom data formats for their research (Figshare hosts over 100 distinct mimetypes)</li>
 <li>Some data is hyper-hetrogeneous, bringing together multi-varied data across many dimensions, in such a way that only the researcher who created that data set understands how to unpick it</li>
 </ul>
 <p>Most of these issues have all been successfully addressed in specific domains or communities.</p>
-<p>Software Carpentry has reached over 120,000 students <span class="citation">(Wilson 2016)</span>. They conduct two day workshops instructing researcchers on the basics of how to work with software. They have created a sister organisation whose aim is to do the same, but on the basics of data management.</p>
-<p>Use field specific standards where they exist. Most core disciplines have well descibed data formats, and apprpriate data repositories, but even in areas that are close, a lack of hamonization of data standards can be an issue. Inistaives like the ISA TOOLs initative can help significantly with creating interoperable data standards in the life sciences.</p>
-<p>With microscopy new microscopes have frequencly created new data formats. To aid with instrument interoprability the microsopcy community created the <a href="http://www.openmicroscopy.org/site/products/omero">OMERO</a> framework, a set of standards and software tools, that supports interopoerablity across over 140 different image formats.</p>
-<p>For keeping track of what happens at the point of data collection, creating smart tooling is an important advance. Also digital lab notebooks have a place to play in this. Google have created a digital lab notebook for the mass market with <a href="https://makingscience.withgoogle.com/science-journal">Google Science Journal</a> and <a href="http://jupyter.org">Project Juypter</a> offers a digitiacl computation notebook that supports collaboartion, computaoition, versioinong and dissemination of scientific results.</p>
-<p>Another route for creating compatable data is to follow data standards bodies. The Open Annotation working group created a data format with a high degree of usaage for annotation in the digital humantiies, and ensured interoparability and openenss of that data format through an open sandardisation process that led the format becoming a W3C standard.</p>
-<h3 id="false-privacy-fears">False privacy fears</h3>
-<p>Privacy concerns are real, but often the conversation gets dominated by this concern, where most data is not affected by this conversation.</p>
-<h3 id="new-tools-create-new-data-formats">New tools create new data formats</h3>
-<p>Especially in microscopy (see OMERO as a solution to this)</p>
-<h3 id="heterogeneous-data">Heterogeneous data</h3>
-<p>A research question may need to pull together data from very different sources, and perhaps only the researcher understands how to combine the data</p>
-<h1 id="core-challenge-two-a-lack-of-infrastructure-for-openness">Core Challenge two: A lack of infrastructure for openness</h1>
-<p>This challenge is addressded by questions two, six, and eight:</p>
+<p>Software Carpentry has reached over 120,000 students <span class="citation">(Wilson 2016)</span>. They conduct two day workshops instructing researchers on the basics of how to work with software. They have created a sister organisation whose aim is to do the same, but on the basics of data management.</p>
+<p>Mention https://rinocloud.com/#demo in terms of how to autogenerate good data <!-- #TODO:finish this section  --></p>
+<p>Use field specific standards where they exist. Most core disciplines have well described data formats, and appropriate data repositories, but even in areas that are close, a lack of harmonisation of data standards can be an issue. Initiatives like the ISA TOOLs <span class="citation">(Sansone et al. 2012)</span> initiative can help significantly with creating interoperable data standards in the life sciences.</p>
+<p>With microscopy new microscopes have frequently created new data formats. To aid with instrument interoperability the microscopy community created the <a href="http://www.openmicroscopy.org/site/products/omero">OMERO</a> framework, a set of standards and software tools, that supports interoperability across over 140 different image formats.</p>
+<p>For keeping track of what happens at the point of data collection, creating smart tooling is an important advance. Also digital lab notebooks have a place to play in this. Google have created a digital lab notebook for the mass market with <a href="https://makingscience.withgoogle.com/science-journal">Google Science Journal</a> and <a href="http://jupyter.org">Project Juypter</a> offers a digital notebook that supports collaboration, computation, versioning and dissemination of scientific results.</p>
+<p>Another route for creating compatible data is to follow data standards bodies. The Open Annotation working group created a data format with a high degree of usage in the digital humanities, and ensured interoperability and openness of that data format through an open standardisation process that led the format becoming a W3C standard.</p>
+<h1 id="core-challenge-two-appropriate-infrastructure-for-open-data">Core Challenge Two: Appropriate Infrastructure for Open Data</h1>
+<p>This challenge is addressed by rules two, six, and eight:</p>
 <ul>
 <li>Rule 2. Share your data online with a Permanent identifier<br />
 </li>
@@ -73,36 +67,26 @@
 </li>
 <li>Rule 8. Foster and use data repositories</li>
 </ul>
-<p><span class="citation">(Geoffrey, Jennifer, and Cameron 2015)</span></p>
-<ul>
-<li>Some data is too large to share easily<br />
+<p>Data that is identifiable, has a stable home, and good curation is data that is findable and accessible. This requires the existence of appropriate infrastructure <span class="citation">(Geoffrey, Jennifer, and Cameron 2015)</span> for that data.</p>
+<p>Good infrastructure does exist for data in many domains of research (e.g. high energy physics, astronomy, genomics <span class="citation">(Benson et al. 2013, <span class="citation">Berman (2000)</span>)</span>), however there are emerging domains for whom data infrastructure is becoming a critical (e.g. high throughput and resolution microscopy, conectomics <span class="citation">(Lichtman, Pfister, and Shavit 2014)</span>, computational social science). These domains share a common pattern of tool sophistication and data generation having expanded at a rate that is much faster than had been anticipated leaving them in a momentary state of data crisis.</p>
+<p>It may be instructive to look at how high energy paticle physics deals with it’s data storage requirments. CERN <span class="citation">(CERN 2009)</span> outlines four levels of data preservation</p>
+<ol style="list-style-type: decimal">
+<li>retain only the publication that the data ended up generating<br />
 </li>
-<li>Some data is not publiclally availalbe</li>
-</ul>
-<p>How do we deal with very large data? <span class="citation">(CERN 2009)</span></p>
-<p>The data under the desk phenomenon is well known.</p>
-<ul>
-<li>Big data has a home, Astronomy, Particle Physics, Genomics<br />
-</li>
-<li>Highly specific data has a home<br />
-</li>
-<li>Hetrogenous “data under the desk” data have no natural home, but there are not options – Figshare, Zenodo, DataDryad, Github
-<ul>
-<li>Challenge here is in making researchers aware of the existence of these resources, and encouraging them to use them.</li>
-</ul></li>
-<li>The greatest challenge is in large data with no natural home (large scale social science data), and data coming from fields whose technical capability is outstripping the level of experience of those fields for dealing with that data. Currently this is an acute problem in microscopy, and is becoming an increasing problem for conectomics <span class="citation">(Lichtman, Pfister, and Shavit 2014)</span>.</li>
-<li><a href="http://www.re3data.org">Registry of Research Data Repositories</a> lists over 1500 research data repositories. The journal Scientific Data also maintains a more <a href="http://www.nature.com/sdata/policies/repositories">curated list</a>.</li>
-<li>example subject specific repositories<br />
-</li>
-<li>Scientific data repository list</li>
-</ul>
-<h3 id="data-owned-by-corporations">Data owned by corporations</h3>
-<p>Large data at google and Facebook scale are owned by companies like google and Facebook. Work that builds on this data cannot be reproduced (this is an edge case). s</p>
-<ul>
-<li>This also helps with data formats, as it requires standarsiation of your data</li>
-</ul>
-<h3 id="lack-of-infrastructure">Lack of infrastructure</h3>
-<p>needs to be dealt with on a subject by subject basis, also libraries may play a role in the future</p>
+<li>preserve the data in a simplified format, this might be for outreach or training purposes</li>
+<li>preserve the analysis software and specification of the data format</li>
+<li>preserve the full reconstruction level data, and possibly some of the original data</li>
+</ol>
+<p>It is understood that much of the primary data coming out of the detector will have to be discarded, and so their data preservation framework allows them to make decisions on what to keep based around the expected future uses of that kind of data.</p>
+<p>It may be possible with emerging high resolution data sources to also find ways to make decisions around whether we can preserve certain artefacts that are of lower dimensionality of the original source data. For example in conectomics one begins with high resolution images of brain slices, and a full 3-D image of a brain can be on the order of petabytes of data, however the final network diagram showing the interconnection of the neuronal scaffolding of a brain will be many orders of magnitude smaller than the original images.</p>
+<!--  For bological samples, hightrougput sequencing  -->
+<p>Another issue to keep in mind about 70% of the lifetime cost is incurred on first write to disk, given the current rates at which the prices of long term data storage is dropping, so the question of which data sets do we need to make strategic decisions around will probably always be with us, but our view on the kind and size of what that data is will constantly be changing.</p>
+<p>In terms of numbers of data sets, most researchers producing data are not producing data at large scale. The questions around how they can create good identifiers for their data, and how they can find appropriate locations to deposit their data, are equally important as for those of large data.</p>
+<p>For subject specific data there usually exists a subject specific repository. The <a href="http://www.re3data.org">Registry of Research Data Repositories</a> lists over 1500 research data repositories. The journal Scientific Data also maintains a more <a href="http://www.nature.com/sdata/policies/repositories">curated list</a>.</p>
+<p>For data that does not naturally find a home in one of these repositories there are also generic data repositories such as Figshare, Zenodo, DataDryad, Imeji and Github. Each of these will allow a researcher to post a public version of their data with an appropriate identifier. The main challenge here is in increasing awareness amongst researchers about the availability of tools like these.</p>
+<p>There has been a growing interest in using peer to peer like systems for building data sharing infrastructures. Though not aimed at creating public repositories, tools like <a href="http://dat-data.com">dat data</a> and <a href="https://github.com/attic-labs/noms">noms</a> have the potential to significantly improve how researchers share and collaborate on data sets with each other.</p>
+<p>There are two other infrastructure challenges that we might consider around data; privacy and ownership.</p>
+<p>For any</p>
 <h1 id="core-challenge-three-creating-a-supporting-culture-for-openness">Core Challenge Three: Creating a supporting culture for openness</h1>
 <p>This is addressed by rules five, seven, nine and ten, and can be summarised by asking how we can ensure that the correct incentives are in place to support the sharing of open data.</p>
 <ul>
@@ -125,6 +109,12 @@
 <h1 id="summary-of-solutions">Summary of solutions</h1>
 <hr />
 <div id="refs" class="references">
+<div id="ref-Benson2013">
+<p>Benson, D. A., M. Cavanaugh, K. Clark, I. Karsch-Mizrachi, D. J. Lipman, J. Ostell, and E. W. Sayers. 2013. “GenBank.” <em>Nucleic Acids Research</em> 41 (D1): D36–D42. doi:<a href="https://doi.org/10.1093/nar/gks1195">10.1093/nar/gks1195</a>.</p>
+</div>
+<div id="ref-Berman2000">
+<p>Berman, H. M. 2000. “The Protein Data Bank.” <em>Nucleic Acids Research</em> 28 (1): 235–42. doi:<a href="https://doi.org/10.1093/nar/28.1.235">10.1093/nar/28.1.235</a>.</p>
+</div>
 <div id="ref-RSOpen">
 <p>Boulton, Geoffrey, Philip Campbell, Brian Collins, Peter Elias, Wendy Hall, Laurie Graeme, Onora O’Neill, et al. 2012. <em>Science as an open enterprise</em>. June. <a href="http://royalsociety.org/uploadedFiles/Royal{\_}Society{\_}Content/policy/projects/sape/2012-06-20-SAOE.pdf" class="uri">http://royalsociety.org/uploadedFiles/Royal{\_}Society{\_}Content/policy/projects/sape/2012-06-20-SAOE.pdf</a>.</p>
 </div>
@@ -145,6 +135,9 @@
 </div>
 <div id="ref-RCKUOpen">
 <p>RCUK. 2015. “Concordat On Open Research Data - Version 10,” no. July.</p>
+</div>
+<div id="ref-Sansone2012">
+<p>Sansone, Susanna-Assunta, Philippe Rocca-Serra, Dawn Field, Eamonn Maguire, Chris Taylor, Oliver Hofmann, Hong Fang, et al. 2012. “Toward interoperable bioscience data.” <em>Nature Genetics</em> 44 (2): 121–26. doi:<a href="https://doi.org/10.1038/ng.1054">10.1038/ng.1054</a>.</p>
 </div>
 <div id="ref-Wilkinson2016">
 <p>Wilkinson, Mark D., Michel Dumontier, IJsbrand Jan Aalbersberg, Gabrielle Appleton, Myles Axton, Arie Baak, Niklas Blomberg, et al. 2016. “The FAIR Guiding Principles for scientific data management and stewardship.” <em>Scientific Data</em> 3 (March). Nature Publishing Group: 160018. doi:<a href="https://doi.org/10.1038/sdata.2016.18">10.1038/sdata.2016.18</a>.</p>
